src/test/deca/context/valid/created/boucle-while.deca
//Description :
// Test d'une boucle while
//
// Resultats :
//


{
    while (false) {
        println("Yo");
    }
}
