src/test/deca/context/invalid/created/methode_nondef.deca
//Description :
// Utilise une méthode non declarée
//
// Resultats :
// Erreur




{
    abc();
}
